--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,510 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
-
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    # Errors
 
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    - always_use_package_imports
+    - avoid_dynamic_calls
+    - avoid_empty_else
+    - avoid_print
+    - avoid_relative_lib_imports
+    - avoid_slow_async_io
+    - avoid_type_to_string
+    - avoid_types_as_parameter_names
+    - avoid_web_libraries_in_flutter
+    - cancel_subscriptions
+    - close_sinks
+    - collection_methods_unrelated_type
+    - comment_references
+    - control_flow_in_finally
+    # - deprecated_member_use_from_same_package
+    # - diagnostic_describe_all_properties
+    # - discarded_futures
+    - empty_statements
+    - hash_and_equals
+    - implicit_reopen
+    - invalid_case_patterns
+    - literal_only_boolean_expressions
+    - no_adjacent_strings_in_list
+    - no_duplicate_case_values
+    - no_logic_in_create_state
+    - no_self_assignments
+    - no_wildcard_variable_uses
+    # - prefer-relative-imports
+    - prefer_void_to_null
+    - test_types_in_equals
+    - throw_in_finally
+    - unnecessary_statements
+    - unrelated_type_equality_checks
+    # - unsafe_html
+    - use_build_context_synchronously
+    - use_key_in_widget_constructors
+    - valid_regexps
+
+    # Style
+
+    - always_declare_return_types
+    # - always_put_control_body_on_new_line
+    # - always_put_required_named_parameters_first
+    # - always_specify_types
+    - annotate_overrides
+    - annotate_redeclares
+    # - avoid_annotating_with_dynamic
+    # - avoid_bool_literals_in_conditional_expressions
+    - avoid_catches_without_on_clauses
+    - avoid_catching_errors
+    # - avoid_classes_with_only_static_members
+    - avoid_double_and_int_checks
+    - avoid_equals_and_hash_code_on_mutable_classes
+    # - avoid_escaping_inner_quotes
+    # - avoid_field_initializers_in_const_classes
+    - avoid_final_parameters
+    - avoid_function_literals_in_foreach_calls
+    - avoid_implementing_value_types
+    - avoid_init_to_null
+    - avoid_js_rounded_ints
+    # - avoid_multiple_declarations_per_line
+    - avoid_null_checks_in_equality_operators
+    # - avoid_positional_boolean_parameters
+    # - avoid_private_typedef_functions
+    # - avoid_redundant_argument_values
+    - avoid_renaming_method_parameters
+    - avoid_return_types_on_setters
+    - avoid_returning_null_for_void
+    - avoid_returning_this
+    # - avoid_setters_without_getters
+    - avoid_shadowing_type_parameters
+    - avoid_single_cascade_in_expression_statements
+    # - avoid_types_on_closure_parameters
+    - avoid_unnecessary_containers
+    - avoid_unused_constructor_parameters
+    - avoid_void_async
+    - await_only_futures
+    - camel_case_extensions
+    - camel_case_types
+    - cascade_invocations
+    - cast_nullable_to_non_nullable
+    - combinators_ordering
+    - conditional_uri_does_not_exist
+    - constant_identifier_names
+    - curly_braces_in_flow_control_structures
+    # - dangling_library_doc_comments
+    - deprecated_consistency
+    - directives_ordering
+    # - do_not_use_environment
+    - empty_catches
+    - empty_constructor_bodies
+    - eol_at_end_of_file
+    - exhaustive_cases
+    - file_names
+    - flutter_style_todos
+    - implementation_imports
+    - implicit_call_tearoffs
+    - join_return_with_assignment
+    - leading_newlines_in_multiline_strings
+    - library_annotations
+    - library_names
+    - library_prefixes
+    - library_private_types_in_public_api
+    # - lines_longer_than_80_chars
+    - matching_super_parameters
+    - missing_whitespace_between_adjacent_strings
+    - no_default_cases
+    - no_leading_underscores_for_library_prefixes
+    - no_leading_underscores_for_local_identifiers
+    - no_literal_bool_comparisons
+    - no_runtimeType_toString
+    - non_constant_identifier_names
+    - noop_primitive_operations
+    - null_check_on_nullable_type_parameter
+    - null_closures
+    # - omit_local_variable_types
+    # - one_member_abstracts
+    - only_throw_errors
+    - overridden_fields
+    - package_api_docs
+    - package_prefixed_library_names
+    # - prefer_assignments
+    - prefer_adjacent_string_concatenation
+    - prefer_asserts_in_initializer_lists
+    - prefer_asserts_with_message
+    - prefer_collection_literals
+    - prefer_conditional_assignment
+    - prefer_const_constructors
+    - prefer_const_constructors_in_immutables
+    - prefer_const_declarations
+    - prefer_const_literals_to_create_immutables
+    - prefer_constructors_over_static_methods
+    - prefer_contains
+    # - prefer_double_quotes
+    - prefer_expression_function_bodies
+    - prefer_final_fields
+    - prefer_final_in_for_each
+    - prefer_final_locals
+    # - prefer_final_parameters
+    - prefer_for_elements_to_map_fromIterable
+    # - prefer_foreach
+    - prefer_function_declarations_over_variables
+    - prefer_generic_function_type_aliases
+    - prefer_if_elements_to_conditional_expressions
+    - prefer_if_null_operators
+    - prefer_initializing_formals
+    - prefer_inlined_adds
+    # - prefer_int_literals
+    - prefer_interpolation_to_compose_strings
+    - prefer_is_empty
+    - prefer_is_not_empty
+    - prefer_is_not_operator
+    - prefer_iterable_whereType
+    - prefer_mixin
+    - prefer_null_aware_method_calls
+    - prefer_null_aware_operators
+    - prefer_single_quotes
+    - prefer_spread_collections
+    - prefer_typing_uninitialized_variables
+    - provide_deprecation_message
+    # - public_member_api_docs
+    - recursive_getters
+    - require_trailing_commas
+    - sized_box_for_whitespace
+    - sized_box_shrink_expand
+    - slash_for_doc_comments
+    - sort_child_properties_last
+    - sort_constructors_first
+    - sort_unnamed_constructors_first
+    - tighten_type_of_initializing_formals
+    - type_annotate_public_apis
+    - type_init_formals
+    - type_literal_in_constant_pattern
+    - unawaited_futures
+    - unnecessary_await_in_return
+    - unnecessary_brace_in_string_interps
+    - unnecessary_breaks
+    - unnecessary_const
+    - unnecessary_constructor_name
+    # - unnecessary_final
+    - unnecessary_getters_setters
+    - unnecessary_lambdas
+    - unnecessary_late
+    - unnecessary_library_directive
+    - unnecessary_new
+    - unnecessary_null_aware_assignments
+    - unnecessary_null_aware_operator_on_extension_on_nullable
+    - unnecessary_null_checks
+    - unnecessary_null_in_if_null_operators
+    - unnecessary_nullable_for_final_variable_declarations
+    - unnecessary_overrides
+    - unnecessary_parenthesis
+    # - unnecessary_raw_strings
+    - unnecessary_string_escapes
+    - unnecessary_string_interpolations
+    - unnecessary_this
+    - unnecessary_to_list_in_spreads
+    - unreachable_from_main
+    - use_colored_box
+    - use_decorated_box
+    - use_enums
+    - use_full_hex_values_for_flutter_colors
+    - use_function_type_syntax_for_parameters
+    # - use_if_null_to_convert_nulls_to_bools
+    - use_is_even_rather_than_modulo
+    - use_late_for_private_fields_and_variables
+    - use_named_constants
+    - use_raw_strings
+    - use_rethrow_when_possible
+    - use_setters_to_change_properties
+    - use_string_buffers
+    - use_string_in_part_of_directives
+    - use_super_parameters
+    - use_test_throws_matchers
+    - use_to_and_as_if_applicable
+    - void_checks
+
+    # Pub
+
+    - depend_on_referenced_packages
+    - package_names
+    - secure_pubspec_urls
+
+analyzer:
+  language:
+    strict-casts: true
+    strict-inference: true
+    strict-raw-types: true
+
+  exclude:
+    - "**/l10n.dart"
+    - "**/messages_all.dart"
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+
+  errors:
+    body_might_complete_normally_nullable: ignore
+    deprecated_member_use_from_same_package: ignore
+
+dart_code_metrics:
+  rules:
+    # Common
+
+    # - arguments-ordering
+    - avoid-accessing-collections-by-constant-index
+    # - avoid-accessing-other-classes-private-members
+    # - avoid-async-call-in-sync-function
+    # - avoid-banned-annotations
+    # - avoid-banned-file-names
+    # - avoid-banned-types
+    - avoid-barrel-files
+    - avoid-bottom-type-in-patterns
+    - avoid-bottom-type-in-records
+    - avoid-cascade-after-if-null
+    # - avoid-collapsible-if
+    - avoid-collection-methods-with-unrelated-types
+    # - avoid-collection-mutating-methods
+    # - avoid-declaring-call-method
+    - avoid-double-slash-imports
+    - avoid-duplicate-cascades
+    - avoid-duplicate-collection-elements
+    - avoid-duplicate-exports
+    - avoid-duplicate-initializers
+    - avoid-duplicate-map-keys
+    - avoid-duplicate-mixins
+    - avoid-duplicate-named-imports
+    - avoid-duplicate-patterns
+    - avoid-duplicate-switch-case-conditions
+    - avoid-duplicate-test-assertions
+    # - avoid-dynamic
+    - avoid-equal-expressions
+    - avoid-explicit-pattern-field-name
+    # - avoid-explicit-type-declaration
+    # - avoid-extensions-on-records
+    - avoid-function-type-in-records
+    - avoid-future-tostring
+    - avoid-generics-shadowing
+    - avoid-global-state
+    # - avoid-identical-exception-handling-blocks
+    # - avoid-ignoring-return-values
+    # - avoid-importing-entrypoint-exports
+    # - avoid-inferrable-type-arguments
+    - avoid-inverted-boolean-checks
+    - avoid-keywords-in-wildcard-pattern
+    # - avoid-late-keyword
+    # - avoid-local-functions
+    # - avoid-long-functions
+    # - avoid-long-files
+    # - avoid-long-parameter-list
+    # - avoid-long-records
+    - avoid-map-keys-contains
+    - avoid-missed-calls
+    # - avoid-missing-enum-constant-in-map
+    - avoid-missing-interpolation
+    # - avoid-missing-test-files
+    - avoid-misused-test-matchers
+    - avoid-misused-wildcard-pattern
+    - avoid-mixing-named-and-positional-fields
+    # - avoid-mutating-parameters
+    # - avoid-negated-conditions
+    # - avoid-nested-conditional-expressions
+    - avoid-nested-futures
+    - avoid-nested-records
+    - avoid-nested-streams-and-futures
+    # - avoid-nested-switch-expressions
+    - avoid-nested-switches
+    # - avoid-non-ascii-symbols
+    - avoid-non-null-assertion
+    - avoid-nullable-interpolation
+    - avoid-nullable-parameters-with-default-values
+    - avoid-nullable-tostring
+    - avoid-one-field-records
+    # - avoid-passing-async-when-sync-expected
+    # - avoid-passing-default-values
+    # - avoid-passing-self-as-argument
+    # - avoid-positional-record-field-access
+    - avoid-recursive-calls
+    - avoid-redundant-async
+    - avoid-redundant-else
+    - avoid-redundant-positional-field-name
+    # - avoid-redundant-pragma-inline
+    - avoid-self-assignment
+    - avoid-self-compare
+    - avoid-shadowed-extension-methods
+    # - avoid-shadowing
+    # - avoid-similar-names
+    # - avoid-substring
+    # - avoid-throw-in-catch-block
+    # - avoid-throw-objects-without-tostring
+    # - avoid-top-level-members-in-tests
+    - avoid-unassigned-late-fields
+    - avoid-unassigned-stream-subscriptions
+    - avoid-uncaught-future-errors
+    - avoid-unconditional-break
+    - avoid-unnecessary-call
+    - avoid-unnecessary-conditionals
+    - avoid-unnecessary-futures
+    - avoid-unnecessary-getter
+    - avoid-unnecessary-if
+    - avoid-unnecessary-local-late
+    - avoid-unnecessary-negations
+    - avoid-unnecessary-nullable-return-type
+    - avoid-unnecessary-reassignment
+    - avoid-unnecessary-return
+    - avoid-unnecessary-super
+    - avoid-unnecessary-type-assertions
+    - avoid-unnecessary-type-casts
+    - avoid-unrelated-type-assertions
+    - avoid-unrelated-type-casts
+    # - avoid-unsafe-collection-methods
+    - avoid-unused-after-null-check
+    - avoid-unused-generics
+    # - avoid-unused-instances
+    - avoid-unused-parameters
+    - avoid-weak-cryptographic-algorithms
+    - avoid-wildcard-cases-with-enums
+    # - ban-name
+    # - banned-usage
+    # - binary-expression-operand-order
+    # - double-literal-format
+    # - enum-constants-ordering
+    # - format-comment
+    # - format-test-name
+    - function-always-returns-null
+    # - map-keys-ordering
+    # - match-class-name-pattern
+    - match-getter-setter-field-names
+    - match-lib-folder-structure
+    # - match-positional-field-names-on-assignment
+    # - member-ordering
+    # - missing-test-assertion
+    - move-records-to-typedefs
+    - move-variable-closer-to-its-usage
+    - move-variable-outside-iteration
+    # - newline-before-case
+    - newline-before-return
+    - no-boolean-literal-compare
+    # - no-empty-block
+    # - no-equal-arguments
+    - no-equal-conditions
+    # - no-equal-nested-conditions
+    - no-equal-switch-case
+    - no-equal-switch-expression-cases
+    - no-equal-then-else
+    # - no-magic-number
+    - no-object-declaration
+    # - parameters-ordering
+    # - prefer-addition-subtraction-assignments
+    - prefer-any-or-every
+    # - prefer-async-await
+    - prefer-both-inlining-annotations
+    # - prefer-bytes-builder
+    - prefer-commenting-analyzer-ignores
+    # - prefer-conditional-expressions
+    # - prefer-correct-callback-field-name
+    - prefer-correct-error-name
+    - prefer-correct-for-loop-increment
+    - prefer-correct-future-return-type
+    # - prefer-correct-handler-name
+    # - prefer-correct-identifier-length
+    - prefer-correct-json-casts
+    - prefer-correct-setter-parameter-name
+    - prefer-correct-stream-return-type
+    # - prefer-correct-switch-length
+    - prefer-correct-test-file-name:
+        exclude: ["lib/**", "bin/**"]
+    # - prefer-correct-type-name
+    - prefer-declaring-const-constructor:
+        ignore-abstract: false
+    - prefer-early-return
+    # - prefer-enums-by-name
+    - prefer-explicit-function-type
+    - prefer-explicit-parameter-names
+    - prefer-explicit-type-arguments
+    # - prefer-first
+    # - prefer-getter-over-method
+    - prefer-immediate-return
+    - prefer-iterable-of
+    - prefer-last
+    # - prefer-match-file-name
+    # - prefer-moving-to-variable
+    - prefer-named-boolean-parameters:
+      ignore-single: true
+    # - prefer-named-imports
+    - prefer-null-aware-spread
+    - prefer-parentheses-with-if-null
+    # - prefer-prefixed-global-constants
+    - prefer-public-exception-classes
+    - prefer-return-await
+    - prefer-returning-conditional-expressions
+    - prefer-simpler-patterns-null-check
+    - prefer-specific-cases-first
+    # - prefer-static-class
+    - prefer-switch-with-enums
+    # - prefer-test-matchers
+    # - prefer-trailing-comma
+    - prefer-type-over-var
+    - prefer-typedefs-for-callbacks:
+        ignore-parameters: true
+    - prefer-unique-test-names
+    # - prefer-unwrapping-future-or
+    # - prefer-visible-for-testing-on-members
+    - prefer-wildcard-pattern
+    # - tag-name
+    # - unnecessary-trailing-comma
+
+    # Flutter
+
+    # - add-copy-with
+    # - always-remove-listener
+    # - avoid-border-all
+    # - avoid-empty-setstate
+    - avoid-expanded-as-spacer
+    # - avoid-incomplete-copy-with
+    # - avoid-inherited-widget-in-initstate
+    - avoid-late-context
+    # - avoid-missing-image-alt
+    - avoid-recursive-widget-calls
+    # - avoid-returning-widgets
+    - avoid-shrink-wrap-in-lists
+    - avoid-single-child-column-or-row
+    - avoid-state-constructors
+    # - avoid-undisposed-instances
+    - avoid-stateless-widget-initialized-fields
+    - avoid-unnecessary-overrides-in-state
+    - avoid-unnecessary-setstate
+    - avoid-unnecessary-stateful-widgets
+    # - avoid-wrapping-in-padding
+    - check-for-equals-in-render-object-setters
+    - consistent-update-render-object
+    - dispose-fields
+    # - prefer-action-button-tooltip
+    - prefer-const-border-radius
+    - prefer-correct-edge-insets-constructor
+    - prefer-dedicated-media-query-methods
+    - prefer-define-hero-tag
+    # - prefer-extracting-callbacks
+    # - prefer-single-widget-per-file
+    - prefer-sliver-prefix
+    - prefer-text-rich
+    # - prefer-using-list-view
+    - prefer-widget-private-members:
+        ignore-static: true
+    - proper-super-calls
+    - use-setstate-synchronously
+
+    # Provider
+
+    - avoid-instantiating-in-value-provider
+    - avoid-read-inside-build
+    # - avoid-watch-outside-build
+    - dispose-providers
+    - prefer-multi-provider
+
+    # Bloc
+
+    - avoid-bloc-public-methods
+    - avoid-cubits
+    - avoid-passing-bloc-to-bloc
+    # - check-is-not-closed-after-async-gap
+    - prefer-correct-bloc-provider
+    - prefer-multi-bloc-provider
+
+  metrics-exclude:
+    - lib/**
+    - test/**
