--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,21 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6
   appflowy_board: ^0.1.2
+  dio: ^5.4.1
+  json_annotation: ^4.9.0
+  flutter_bloc: ^8.1.4
+  freezed_annotation: ^2.4.1
+  flutter_boardview: ^0.2.1
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^3.0.0
+  build_runner: ^2.4.11
+  json_serializable: ^6.8.0
+  freezed: ^2.5.2
+  flutter_lints: ^4.0.0
 flutter:
   uses-material-design: true
 
