--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   freezed_annotation: ^2.4.1
   flutter_boardview: ^0.2.1
+  flutter_dotenv: ^5.1.0
 
 
 
@@ -29,4 +30,6 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 flutter:
   uses-material-design: true
+  assets:
+    - config.env
 
